--- a/docker-compose-debug.yml
+++ b/docker-compose-debug.yml
@@ -29,7 +29,7 @@ services:
     ports:
       - "5173:5173"
     volumes:
-      - "./vue:/app/src/views"
+      - "./workspace/manage:/app/src/views"
     environment:
       - API_HOST=nginx
     depends_on:
@@ -41,7 +41,7 @@ services:
     ports:
       - "5174:5173"
     volumes:
-      - "./uniapp:/app/src/pages"
+      - "./workspace/uniapp:/app/src/pages"
     depends_on:
       - vue
       - app 
